🎓 NIVEL 4 COMPLETO: Sistema integral de seguridad y gestión de usuarios
✅ IMPLEMENTACIÓN ACADÉMICA NIVEL 4:
- Seguridad avanzada: ClamAV, Fail2Ban, AUDITD, AIDE, UFW
- Gestión de usuarios: 5 usuarios especializados + 5 grupos funcionales
- Directorios compartidos con permisos granulares
- Políticas de contraseñas y configuración sudo avanzada

📚 DOCUMENTACIÓN PROFESIONAL:
- Guía de implementación desde cero para VM nueva
- Script de instalación completamente automático
- Documentación académica con capturas de evidencia
- Solución de problemas y troubleshooting completo
- Comandos rápidos y verificación del sistema

🔒 COMPONENTES DE SEGURIDAD:
- Antivirus con escaneo automático programado
- Sistema IDS/IPS contra intrusiones
- Auditoría del sistema en tiempo real
- Verificación de integridad de archivos
- Firewall con reglas personalizadas

👥 GESTIÓN AVANZADA DE USUARIOS:
- lab_admin, lab_operator, lab_developer, lab_audit, lab_backup
- Grupos: admin_users, developers, operators, backup_users, audit_users
- Estructura de directorios: /opt/lab_data con permisos específicos
- Plantillas de reportes y verificación automática

🚀 IMPLEMENTACIÓN:
- Script ./implementar_laboratorio.sh para despliegue automático
- Verificaciones previas y post-instalación
- Logging detallado y reportes de estado
- Compatible con Ubuntu/Debian desde VM limpia

📖 CUMPLIMIENTO ACADÉMICO:
✅ Unidad 2: Gestión de procesos y servicios (Nivel 4)
✅ Unidad 3: Seguridad del sistema operativo (Nivel 4)
✅ Documentación completa para evaluación
✅ Evidencias y capturas de pantalla incluidas

--- a/roles/usuarios_permisos/defaults/main.yml
+++ b/roles/usuarios_permisos/defaults/main.yml
@@ -1,37 +1,70 @@
 ---
-# Variables por defecto para el rol usuarios_permisos
+# Variables por defecto para gestión de usuarios del laboratorio
 
-# Usuario administrador principal
-admin_user: "jhonatan"
-admin_group: "sudo"
-
-# Grupos a crear en el sistema
-user_groups:
-  - docentes
-  - soporte
-  - laboratorio
-
-# Usuarios a crear (sin contraseñas en texto plano - usar vault)
+# Lista de usuarios a crear
 lab_users:
-  - name: "adminlab"
-    group: "laboratorio"
-    sudo: true
-  - name: "tecnico1"
-    group: "soporte"
-    sudo: false
-  - name: "profesor1"
-    group: "docentes"
-    sudo: false
+  - username: "lab_admin"
+    uid: 3000
+    primary_group: "admin_users" 
+    groups: ["sudo", "adm", "audit_users"]
+    description: "Administrador del laboratorio"
+    shell: "/bin/bash"
+  - username: "lab_operator"
+    uid: 3001
+    primary_group: "operators"
+    groups: ["backup_users"]
+    description: "Operador del laboratorio"
+    shell: "/bin/bash"
+  - username: "lab_developer"
+    uid: 3002
+    primary_group: "developers"
+    groups: ["operators"]
+    description: "Desarrollador del laboratorio"
+    shell: "/bin/bash"
+  - username: "lab_audit"
+    uid: 3003
+    primary_group: "audit_users"
+    groups: []
+    description: "Usuario de auditoría (solo lectura)"
+    shell: "/bin/bash"
+  - username: "lab_backup"
+    uid: 3004
+    primary_group: "backup_users"
+    groups: []
+    description: "Usuario para tareas de backup"
+    shell: "/bin/bash"
 
-# Políticas de contraseña
+# Grupos del laboratorio
+lab_groups:
+  - name: "admin_users"
+    gid: 2000
+    description: "Administradores del laboratorio"
+  - name: "developers"
+    gid: 2001
+    description: "Desarrolladores y programadores"
+  - name: "operators"
+    gid: 2002
+    description: "Operadores de sistemas"
+  - name: "backup_users"
+    gid: 2003
+    description: "Usuarios para tareas de backup"
+  - name: "audit_users"
+    gid: 2004
+    description: "Usuarios de auditoría y monitoreo"
+
+# Políticas de contraseñas
 password_policy:
-  min_length: 8
-  require_special_chars: true
+  min_length: 12
   max_age_days: 90
+  min_age_days: 1
+  warn_age_days: 14
+  require_digits: true
+  require_uppercase: true
+  require_lowercase: true
+  require_special: true
 
-# Configuración de sudo
-sudo_nopasswd_users:
-  - "adminlab"
-
-# Directorio base para usuarios
-user_home_base: "/home"
+# Configuración de SSH
+ssh_config:
+  allow_groups: ["admin_users", "developers", "operators"]
+  deny_root_login: true
+  max_auth_tries: 3
